use java 17 features (#747)